--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zp-component-library",
   "version": "0.0.1",
+  "license": "ISC",
   "scripts": {
     "start": "dumi dev",
     "docs:build": "dumi build",
@@ -37,10 +38,12 @@
     "@types/jest": "^27.0.3",
     "@umijs/fabric": "^2.8.1",
     "@umijs/test": "^3.0.5",
+    "antd": "4.22.0",
     "dumi": "^1.1.0",
     "father": "^4.0.0-rc.2",
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
+    "lodash": "4.17.21",
     "prettier": "^2.2.1",
     "yorkie": "^2.0.0"
   }
