--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     ]
   },
   "dependencies": {
+    "ahooks": "3.1.9",
+    "axios": "0.24.0",
+    "classnames": "2.2.6",
+    "crypto-ts": "1.0.2",
+    "lodash": "4.17.21",
+    "moment": "2.29.1",
     "react": "^18.0.0"
   },
   "devDependencies": {
@@ -42,8 +48,11 @@
     "dumi": "^1.1.0",
     "father": "^4.0.0-rc.2",
     "gh-pages": "^3.0.0",
+    "less": "3.13.1",
+    "less-loader": "7.2.0",
+    "less-plugin-functions": "^1.0.0",
     "lint-staged": "^10.0.7",
-    "lodash": "4.17.21",
+    "style-resources-loader": "1.5.0",
     "prettier": "^2.2.1",
     "yorkie": "^2.0.0"
   }
