--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "crypto-ts": "1.0.2",
     "lodash": "4.17.21",
     "moment": "2.29.1",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.1",
