--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@umijs/fabric": "^2.8.1",
     "@umijs/test": "^3.0.5",
     "antd": "4.22.0",
+    "babel-plugin-import": "^1.13.5",
     "dumi": "^1.1.0",
     "father": "^4.0.0-rc.2",
     "gh-pages": "^3.0.0",
@@ -56,6 +57,7 @@
     "prettier": "^2.2.1",
     "style-resources-loader": "1.5.0",
     "styled-components": "^5.3.6",
+    "thread-loader": "^3.0.4",
     "yorkie": "^2.0.0"
   }
 }
