--- a/package.json
+++ b/package.json
@@ -1,63 +1,108 @@
 {
   "name": "zp-design",
-  "version": "0.0.3",
+  "version": "1.0.1",
   "license": "ISC",
   "scripts": {
     "start": "dumi dev",
     "docs:build": "dumi build",
     "docs:deploy": "gh-pages -d docs-dist",
-    "build": "father build",
-    "deploy": "npm run docs:build && npm run docs:deploy",
+    "build": "father-build",
+    "release": "npm run build && npm publish",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "lint": "eslint --ext .js --ext .ts --ext .jsx --ext .tsx src/",
+    "lint:fix": "eslint --ext .js --ext .ts --ext .jsx --ext .tsx src/ --fix"
   },
+  "main": "dist/index.esm.js",
+  "module": "dist/index.esm.js",
+  "typings": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "es"
   ],
-  "module": "dist/esm/index.js",
-  "typings": "dist/esm/index.d.ts",
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.{js,jsx,md,json}": [
+    "*.{less,md,json}": [
       "prettier --write"
     ],
     "*.ts?(x)": [
-      "prettier --parser=typescript --write"
+      "prettier --parser=typescript --write",
+      "eslint --ext .ts --ext .tsx src/"
+    ],
+    "*.js?(x)": [
+      "prettier --write",
+      "eslint --ext .js --ext .jsx src/"
     ]
   },
   "dependencies": {
+    "@babel/runtime": "7.18.3",
+    "@popperjs/core": "2.9.1",
     "ahooks": "3.1.9",
     "axios": "0.24.0",
     "classnames": "2.2.6",
     "crypto-ts": "1.0.2",
+    "docx": "^7.5.0",
+    "isomorphic-fetch": "^3.0.0",
     "lodash": "4.17.21",
     "moment": "2.29.1",
-    "react": "^18.0.0",
-    "react-beautiful-dnd": "^13.1.1"
+    "numeral": "2.0.6",
+    "rc-resize-observer": "1.2.0",
+    "react-beautiful-dnd": "13.1.0",
+    "react-resizable": "3.0.4",
+    "resize-observer-polyfill": "1.5.1",
+    "rxjs": "6.5.4",
+    "styled-components": "5.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^13.0.0",
-    "@types/jest": "^27.0.3",
-    "@umijs/fabric": "^2.8.1",
-    "@umijs/test": "^3.0.5",
+    "@ant-design/icons": "4.7.0",
+    "@babel/eslint-parser": "7.17.0",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@types/classnames": "2.2.9",
+    "@types/lodash": "4.14.178",
+    "@types/node": "17.0.42",
+    "@types/numeral": "^2.0.2",
+    "@types/react": "18.0.9",
+    "@types/react-beautiful-dnd": "13.1.2",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-resizable": "3.0.1",
+    "@types/styled-components": "5.0.1",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "@umijs/test": "3.5.20",
     "antd": "4.22.0",
-    "babel-plugin-import": "^1.13.5",
-    "dumi": "^1.1.0",
-    "father": "^4.0.0-rc.2",
+    "babel-plugin-import": "1.13.3",
+    "babel-plugin-polyfill-corejs2": "0.3.3",
+    "babel-plugin-polyfill-corejs3": "0.6.0",
+    "dumi": "1.1.46",
+    "eslint": "7.x",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-import-resolver-alias": "1.1.2",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "father-build": "1.20.4",
     "gh-pages": "^3.0.0",
     "less": "3.13.1",
     "less-loader": "7.2.0",
     "less-plugin-functions": "^1.0.0",
-    "lint-staged": "^10.0.7",
-    "prettier": "^2.2.1",
+    "lint-staged": "10.0.7",
+    "prettier": "2.2.1",
+    "qrcode.react": "^3.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-is": "^17.0.1",
+    "rollup-plugin-commonjs": "10.1.0",
     "style-resources-loader": "1.5.0",
-    "styled-components": "^5.3.6",
-    "thread-loader": "^3.0.4",
-    "yorkie": "^2.0.0"
+    "typescript": "4.7.3",
+    "yorkie": "2.0.0"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.1",
+    "react-dom": "^16.8.0 || ^17.0.1",
+    "react-is": "^16.8.0 || ^17.0.1"
   }
 }
