--- a/package.json
+++ b/package.json
@@ -96,7 +96,9 @@
     "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
     "rollup-plugin-commonjs": "10.1.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-resources-loader": "1.5.0",
+    "thread-loader": "^3.0.4",
     "typescript": "4.7.3",
     "yorkie": "2.0.0"
   },
