--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "zp-design",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"license": "ISC",
 	"scripts": {
 		"start": "dumi dev",
 		"docs:build": "dumi build",
 		"docs:deploy": "gh-pages -d docs-dist",
 		"build": "father-build",
-		"release": "npm run build && npm publish",
+		"public": "node public.mjs",
 		"prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
 		"test": "umi-test",
 		"test:coverage": "umi-test --coverage",
