--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
 		"babel-plugin-import": "1.13.3",
 		"babel-plugin-polyfill-corejs2": "0.3.3",
 		"babel-plugin-polyfill-corejs3": "0.6.0",
-		"dumi": "1.1.46",
+		"dumi": "^1.1.46",
 		"eslint": "7.x",
 		"eslint-config-prettier": "8.3.0",
 		"eslint-import-resolver-alias": "1.1.2",
